# sdmx-mcp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  PRESENTATION_SCRIPT.md  README.md  discovery_policy.example.json  fly.eval.toml  fly.permissive.toml  fly.toml  main.py  pyproject.toml  query_dimension_policy.example.json  query_dimension_policy.json  query_dimension_policy.permissive.json  sdmx_utils.py  server.py  theme_prefixes_domain.csv
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: fly-deploy.yml  main.yml  unicef-global-eval.yml  unicef-policy-contract-eval.yml
scripts/: agent_test_rig.py  agent_test_scenarios.example.jsonl  list_theme_prefixes.py  mcp_policy_contract.example.json  mcp_policy_contract.unicef.example.json  mcp_policy_contract_eval.py  sdmx_eval_config.example.json  sdmx_eval_config.unicef_global.example.json  sdmx_eval_provider_anthropic.py  sdmx_eval_provider_template.py  sdmx_eval_runner.py
tests/: conftest.py  test_compact_projection.py  test_indicator_table_shaper.py  test_name_resolution.py  test_query_dimension_policy.py
