[project]
name = "sdmx-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "cachetools>=7.0.6",
    "httpx>=0.28.1",
    "fastmcp>=3.3.1",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.2.2",
]

[tool.setuptools]
py-modules = ["server", "main"]
