[project]
name = "sdmx-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "cachetools>=7.1.4",
    "httpx>=0.28.1",
    "fastmcp>=3.4.2",
    "mcp[cli]>=1.27.2",
    "python-dotenv>=1.2.2",
    "defusedxml>=0.7.1",
]

[tool.setuptools]
py-modules = ["server", "main"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
